# Texas-Historical-Markers

./: .gitignore  .~lock.atlas_db.csv#  AGENTS.md  AddNode2Josm.ipynb  Notes.md  README.md  TODO.md  hmdb.py
.ipynb_checkpoints/: AddNode2Josm-checkpoint.ipynb  Untitled-checkpoint.ipynb
data/: hmdb_formatted.csv  markers_hmdb-simple.csv  markers_osm.csv
file_backup/: .~lock.HMdb-Entries-in-Texas-20241226.csv#  20241230_OSM-data
pythonLib/: HMDB_sync_workflow.md  Makefile  README.md  _apply_hmdb_conflicts.py  _apply_proposed_updates.py  _dedup_test.py  _filter_erected_by.py  completions.sh  functions_reference.md  near_route_all_5mi.csv  near_route_map_all_5mi.html  pyproject.toml
pythonLib/archive_scripts/: MarkersAlongTrack.ipynb  MarkersAlongTrack.md  MarkersAlongTrack.py  ParseCsvIntoCounties.ipynb  ParseCsvIntoCounties.py  ParseCvsIntoCounties.md
pythonLib/tests/: conftest.py  test_cli_dispatch.py  test_counties.py  test_matching_edge_cases.py  test_osm_dedup.py  test_osm_refix.py  test_osm_sync.py  test_schema_validation.py  test_sqlite_sync.py  test_sqlite_viewer.py  test_utils.py
pythonLib/thc_markers/: README.md  cli.py  counties_cli.py  route_cli.py  utils.py
pythonLib/thc_markers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pythonLib/thc_toolkit/: atlas_cli.py  cli.py  counties_cli.py  hmdb_fetch.py  hmdb_sync.py  map_cli.py  osm_cli.py  osm_dedup.py  osm_refix.py  osm_refix_direct.py  osm_sync.py  route_cli.py  sqlite_sync.py  sqlite_viewer.py  utils.py
pythonLib/thc_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: AddNode2Josm.ipynb  UpdateOsmNode.ipynb  hmdb.py  test.kml  track01.kml
unmapped markers/: Anderson_unmapped_markers.kml  Anderson_unmapped_no_coords.txt  Angelina_unmapped_markers.kml  Angelina_unmapped_no_coords.txt  Archer_unmapped_markers.kml  Archer_unmapped_no_coords.txt  Armstrong_unmapped_markers.kml  Armstrong_unmapped_no_coords.txt  Atascosa_unmapped_markers.kml  Atascosa_unmapped_no_coords.txt  Austin_unmapped_markers.kml  Austin_unmapped_no_coords.txt  Bandera_unmapped_markers.kml  Bandera_unmapped_no_coords.txt  Bastrop_unmapped_markers.kml  Bastrop_unmapped_no_coords.txt  Baylor_unmapped_markers.kml  Baylor_unmapped_no_coords.txt  Bee_unmapped_markers.kml  Bee_unmapped_no_coords.txt  Bell_unmapped_markers.kml  Bexar_unmapped_markers.kml  (+438 more)
(+25 files in other folders)
