[project]
name = "thc-toolkit"
version = "0.2.3"
description = " Texas Historical Marker mapping toolkit"
authors = [{ name="Joe Lotz" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas", "shapely", "geopy", "pyproj",
    "folium", "geopandas", "requests", "rich"
]

[project.scripts]
thc = "thc_toolkit.cli:main"
